# wordmaster

./: .gitignore  BUGFIX_NOTES.md  BUILD_AND_TEST.md  CLI_USAGE_GUIDE.md  CMakeLists.txt  GUI_COMPLETETION_GUIDE.md  Makefile  QUICK_START.md  README.md  README_DEV.md
datas/word/: recommend_word.json
resources/: resources.qrc
resources/database/: 001_initial_schema.sql
scripts/: build.bat  build.sh  debug_review.sh  fix_review_dates.sh  quick_test.sh  verify_data.sh
src/: main.cpp
src/application/services/: book_service.cpp  book_service.h  sm2_scheduler.cpp  sm2_scheduler.h  study_service.cpp  study_service.h  tag_service.cpp  tag_service.h
src/domain/: entities.h  repositories.h
src/infrastructure/: sqlite_adapter.cpp  sqlite_adapter.h
src/infrastructure/repositories/: book_repository.cpp  book_repository.h  review_schedule_repository.cpp  review_schedule_repository.h  study_record_repository.cpp  study_record_repository.h  word_repository.cpp  word_repository.h  word_tag_repository.cpp  word_tag_repository.h
src/presentation/: mainwindow.cpp  mainwindow.h
src/presentation/widgets/: book_list_widget.cpp  book_list_widget.h  notebook_widget.cpp  notebook_widget.h  review_widget.cpp  review_widget.h  statistics_widget.cpp  statistics_widget.h  study_widget.cpp  study_widget.h
tests/: CMakeLists.txt  test_helpers.cpp  test_helpers.h
tests/integration/: test_book_import.cpp  test_study_flow.cpp
tests/unit/: test_book_repository.cpp  test_sm2_algorithm.cpp  test_sqlite_adapter.cpp  test_word_repository.cpp
tools/: wordmaster_cli.cpp
